@@ -4,6 +4,7 @@
 
 === 1.0.9 ===
 * Removed Makefile.d. Dependencies are now automatically generated at the build stage.
+* Updated build scripts.
 
 === 1.0.8 ===
 * Updated module versions in dependencies.
